# matcha-hackathon

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: agent.py  config.py  diagram_client.py  gmi_client.py  hydradb_client.py  main.py  memory_seed.py  models.py  photon_client.py  pixverse_client.py  store.py
photon-bridge/: bridge.js  package-lock.json  package.json
