[project]
name = "sentinel"
version = "0.1.0"
description = "SMS-native incident command agent — Photon · HydraDB · GMI Cloud · PixVerse"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.5",
    "uvicorn[standard]>=0.32.1",
    "httpx>=0.27.2",
    "pydantic>=2.10.3",
    "pydantic-settings>=2.6.1",
    "python-multipart>=0.0.20",
    "gmicloud>=0.1.10",
    "pyjwt>=2.12.1",
    "requests>=2.32.5",
    "tqdm>=4.67.3",
]

[project.scripts]
sentinel = "app.main:app"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
